<resources>
    <string name="app_name">Simple Blog App</string>
    <string name="title_header">Blog Title*</string>
    <string name="blog_description">Blog Description*</string>
    <string name="blog_categories">Blog categories*</string>
    <string name="details_actionbar_text"></string>
    <string name="select_category_text">Select Categories</string>
    <string name="create_blog_actionbar_text">Create new post</string>
    <string name="create_blog_post_button_text">Create Blog Post</string>
    <string name="edit_notice">Now each field is editable</string>
    <string name="type_here">type here</string>


</resources>